[package]
name = "sigils"
version = "0.0.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sigils/0.0.0"
homepage = "https://github.com/zakarumych/sigils"
repository = "https://github.com/zakarumych/sigils"
description = "Experimental ECS"
